--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,13 @@
     </dependency>
     <dependency>
           <groupId>nz.ac.waikato.cms.weka</groupId>
-          <artifactId>weka-stable</artifactId>
-          <version>3.6.11</version>
+          <artifactId>weka-dev</artifactId>
+          <version>3.7.5</version>
+      </dependency>
+      <dependency>
+          <groupId>com.github.rholder</groupId>
+          <artifactId>snowball-stemmer</artifactId>
+          <version>1.3.0.581.1</version>
       </dependency>
   </dependencies>
 </project>
